--- a/Image Gallery/index.html
+++ b/Image Gallery/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-gray-950 w-screen h-screen flex flex-col">
     <div class="flex-1 bg-white">
-        <img src="img/1.jpg" class="h-screen w-full object-fill p-6" id="main-image">
+        <img src="img/1.jpg" class="h-screen w-full object-fill" id="main-image">
     </div>
 
     <div class="w-full h-24 fixed bottom-0 bg-gray-500 flex justify-center items-center flex-row gap-2 overflow-hidden">
@@ -17,26 +17,28 @@
         </div>
         
         <div id="scroll-contain" class="w-full flex flex-row overflow-hidden gap-4">
-            <img src="img/1.jpg" class="w-20 h-20 rounded-md">
-            <img src="img/2.jpg" class="w-20 h-20 rounded-md">
-            <img src="img/3.jpg" class="w-20 h-20 rounded-md">
-            <img src="img/4.jpg" class="w-20 h-20 rounded-md">
-            <img src="img/5.jpg" class="w-20 h-20 rounded-md">
-            <img src="img/6.jpg" class="w-20 h-20 rounded-md">
-            <img src="img/7.jpg" class="w-20 h-20 rounded-md">
-            <img src="img/8.jpg" class="w-20 h-20 rounded-md">
-            <img src="img/9.jpg" class="w-20 h-20 rounded-md">
-            <img src="img/10.jpg" class="w-20 h-20 rounded-md">
-            <img src="img/11.jpg" class="w-20 h-20 rounded-md">
-            <img src="img/12.jpg" class="w-20 h-20 rounded-md">
-            <img src="img/13.jpg" class="w-20 h-20 rounded-md">
-            <img src="img/14.jpg" class="w-20 h-20 rounded-md">
-            <img src="img/15.jpg" class="w-20 h-20 rounded-md">
+            <img src="img/1.jpg" class="w-20 h-20 rounded-md thumb">
+            <img src="img/2.jpg" class="w-20 h-20 rounded-md thumb">
+            <img src="img/3.jpg" class="w-20 h-20 rounded-md thumb">
+            <img src="img/4.jpg" class="w-20 h-20 rounded-md thumb">
+            <img src="img/5.jpg" class="w-20 h-20 rounded-md thumb">
+            <img src="img/6.jpg" class="w-20 h-20 rounded-md thumb">
+            <img src="img/7.jpg" class="w-20 h-20 rounded-md thumb">
+            <img src="img/8.jpg" class="w-20 h-20 rounded-md thumb">
+            <img src="img/9.jpg" class="w-20 h-20 rounded-md thumb">
+            <img src="img/10.jpg" class="w-20 h-20 rounded-md thumb">
+            <img src="img/11.jpg" class="w-20 h-20 rounded-md thumb">
+            <img src="img/12.jpg" class="w-20 h-20 rounded-md thumb">
+            <img src="img/13.jpg" class="w-20 h-20 rounded-md thumb">
+            <img src="img/14.jpg" class="w-20 h-20 rounded-md thumb">
+            <img src="img/15.jpg" class="w-20 h-20 rounded-md thumb">
         </div>
 
         <div id="right-btn" class="cursor-pointer">
             <img src="img/right.png" class="w-20 h-20 rounded-md">
         </div>
     </div>
+
+    <script src="image.js"></script>
 </body>
 </html>
