--- a/Copy To Clipboard Tool/index.html
+++ b/Copy To Clipboard Tool/index.html
@@ -16,11 +16,13 @@
             <input id="copy-input" type="text" placeholder="Type here.." class="w-96 h-16 border-2 border-black text-black rounded-md">
         </div>
 
-        <div class=" w-full h-12 flex items-center justify-center">
+        <div class=" w-full h-12 flex items-center justify-center gap-4">
             <button id="copy-button" class="bg-yellow-950 w-32 h-12 border-2 border-black text-black rounded-md text-white text-xl">Copy</button>
+
+            <button id="delete-button" class="bg-red-700 w-32 h-12 border-2 border-black text-black rounded-md text-white text-xl">Clear Copy</button>
         </div>
 
-        <div class="flex-1 flex items-center justify-center mt-10">
+        <div class="flex-1 flex flex-col items-center justify-center mt-10 text-2xl text-bold italic">
             <p>Copied text: <span id="result-span"></span></p>
         </div>
     </main>
