--- a/Geolocation Weather App/index.html
+++ b/Geolocation Weather App/index.html
@@ -7,11 +7,23 @@
     <title>Document</title>
 </head>
 <body class="bg-gray-100 flex flex-col justify-center items-center h-screen">
-    <div id="container" class="bg-gray-950 w-1/2 h-96 rounded-md">
+    <div id="container" class="bg-gray-950 w-1/2 h-96 rounded-md gap-4">
         <h1 class="w-full text-white text-center text-2xl">Locate Me 📍</h1>
         <div class="w-full flex justify-center items-center mt-2">
             <button id="find-me-button" class="border-2 border-white bg-white p-2 rounded-md ">FIND MY COORDINATES</button>
         </div>
+
+        <div class="data-box text-white text-center text-2xl">
+            Lat: <span id="latitude">0.00</span>
+        </div>
+
+        <div class="data-box text-white text-center text-2xl">
+            Long: <span id="longitude">0.00</span>
+        </div>
+
+        <a id="map-link" class="hidden text-white">VIEW ON MAP</a>
     </div>
+
+<script src="index.js"></script>
 </body>
 </html>
