--- a/Weather Forecast with Charts/index.html
+++ b/Weather Forecast with Charts/index.html
@@ -9,11 +9,12 @@
 </head>
 <body class="bg-gray-950 min-h-screen flex justify-center items-center p-8">
 
-<div class="w-full max-w-4xl min-h-[300px] bg-gray-600 flex flex-col rounded-lg">
-    <canvas id="chart-canvas">
+    <div class="w-full max-w-4xl min-h-[300px] bg-gray-600 flex flex-col rounded-lg">
+        <canvas id="chart-canvas">
 
-    </canvas>
-</div>
+        </canvas>
+    </div>
 
+<script src="chart.js"></script>
 </body>
 </html>
