--- a/Weather Forecast with Charts/index.html
+++ b/Weather Forecast with Charts/index.html
@@ -7,9 +7,14 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <title>Document</title>
 </head>
-<body class="bg-gray-950 min-h-screen flex justify-center items-center p-8">
+<body class="bg-gray-950 min-h-screen flex flex-col justify-center items-center p-8">
 
-    <div class="w-full max-w-4xl min-h-[300px] bg-gray-600 flex flex-col rounded-lg">
+    <div class="w-full h-16 flex justify-center items-center">
+        <input id="input" type="text" class="bg-white w-96 rounded-l-md">
+        <button id="search-button" class="bg-gray-500 text-black px-4 rounded-r-md text-white">SEARCH</button>
+    </div>
+
+    <div class="w-full max-w-4xl min-h-[300px] bg-white flex flex-col rounded-lg">
         <canvas id="chart-canvas">
 
         </canvas>
